# IC-projeto

./: .gitignore
Parte1-texto/: analyse.py  run.bat  run.sh  texto.cpp
Parte1-texto/pt/: ep-00-01-18.txt  ep-00-01-19.txt  ep-00-01-20.txt  ep-00-01-21.txt
Parte2-audio/: CMakeLists.txt  main.cpp  matplotlibcpp.h
Parte3-imagem/: Makefile  imagem.cpp
